# BookCollection

./: .env  .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py
app/files/: db.json  open_library_book.json  properties.txt
app/src/: __init__.py  create_book.py  get_books.py  get_data.py  main.py  messages.py  notion_requests.py  print_book.py  update_books.py  utils.py
app/src/get_data/: blackwells.py  get_data.py  goodreads.py  google_books.py  open_library.py  source_abstract.py  sources.py  utils.py
app/src/languages/: __init__.py  en.py
app/src/tests/: test_blackwells.py  test_goodreads.py  test_google_books.py  test_open_library.py  test_update_books.py
app/tests/: print_get_data.py  print_get_json.py  test_get.py  test_update  test_update.py
