[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "book_collection_liana_vena"
version = "0.1"
requires-python = ">= 3.10"
authors = [{ name = "Liana Vena" }]
description = "Notion plugin for importing book data"
dependencies = ["beautifulsoup4", "python-dotenv", "requests"]
readme = "README.md"
